--- a/examples/qwen2/requirements.txt
+++ b/examples/qwen2/requirements.txt
@@ -15,6 +15,7 @@ aiohttp_sse_client
 openai==1.1.1
 accelerate> 0.21.0
 auto-gptq
+# 以下编译安装cuda extention
 # git clone https://github.com/PanQiWei/AutoGPTQ.git && cd AutoGPTQ
 # pip install numpy gekko pandas .
 # pip install -vvv -e .
